# AutoRecLab

./: Dockerfile  README.md  compose.yaml  config.py  config.toml  main.py  pyproject.toml  start.sh  viz.py
treesearch/: function_specs.py  interpreter.py  metric.py  minimal_agent.py  node.py  search.py
treesearch/backend/: backend_anthropic.py  backend_openai.py  llm.py  utils.py
treesearch/utils/: response.py
utils/: log.py
